# Umbra

./: .gitignore  .swp  DEVLOG.md  DYNAMIC_APPS_SUMMARY.md  README.md  daemon.py  main.py  pyproject.toml  requirements.txt
commands/: __init__.py  cli_tasks.py  daemon.py  doctor.py  message.py  remind.py  system.py  workflow.py
config/: settings.py
core/: __init__.py  parser.py
core/chains/: __init__.py  chain_engine.py
core/workflows/: workflow_engine.py  workflow_loader.py  workflow_registry.py
data/: workflows.json
services/: __init__.py  action_manager.py  dispatcher.py  formatter.py  logger.py  notifier.py  scheduler.py  system_executor.py  whatsapp.py
storage/: __init__.py  task_store.py
system/: service.py
umbra/: api.py
umbra/shell/: integration.py
